Fix layout bugs

--- a/app/assets/stylesheets/students.css.scss
+++ b/app/assets/stylesheets/students.css.scss
@@ -41,9 +41,7 @@ form#student-form {
   margin-top: 25px;
   margin-bottom: 20px;
   padding-top: 10px;
-  width: 60%;
   min-height: 100px;
-  border: 1px solid #DDD;
   .width-users {
     width:550px;
     .width-name { 
@@ -128,7 +126,7 @@ form#new_student_sharing, form.edit_student_sharing, form#new_status {
     height: 20px;
     margin-bottom: 20px;
     overflow: hidden;
-    width: 350px;
+    width: 330px;
     .bar {
       -moz-box-sizing: border-box;
       -moz-transition: width 0.6s ease 0s;
